[tool.poetry]
name = "ascii-wizard"
version = "0.1.0"
description = ""
authors = ["scaboodles <owenj.wolff2@gmail.com>"]
readme = "README.md"
packages = [{include = "ascii_wizard"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
